--- a/sample_index.html
+++ b/sample_index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="sign-log">
                 <div class="login">
-                    <p class="text-menu" onclick="doLogin()">Login</p>
+                    <p class="text-menu" onclick="pageDirect()">Login</p>
                 </div>
                 <div class="login">
                     <p class="text-menu">Sign up</p>
