--- a/sample_index.html
+++ b/sample_index.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" type="text/css" href="style_7.css">
         <link rel="stylesheet" type="text/css" href="style_8.css">
         <link rel="stylesheet" type="text/css" href="style_9.css">
-        <script type="text/javascript" src="main.js" ></script>
     </head>
     <body>
         <!-- header & hero section  -->
@@ -101,10 +100,10 @@
             </div>
             <div class="sign-log">
                 <div class="login">
-                    <p class="text-menu" onclick="pageDirect()">Login</p>
+                    <p class="text-menu" onclick="pageDirectLogin()">Login</p>
                 </div>
                 <div class="login">
-                    <p class="text-menu">Sign up</p>
+                    <p class="text-menu" onclick="pageDirectSignin()">Sign up</p>
                 </div>
             </div>
         </div>
@@ -727,4 +726,6 @@
             </div>
         </div>
     </body>
+    <script type="text/javascript" src="main.js" ></script>
+
 </html>
